Bug fix for the profile background gradient repeating multiple times on mobile browsers

--- a/stylesheets/phone_portrait.css
+++ b/stylesheets/phone_portrait.css
@@ -16,8 +16,6 @@
 
 #profile_panel {
   flex: 4;
-  background-position: center 75%;
-  background-size: 20%;
   height: 100%;
   background-image: linear-gradient(#EFF7CF, orange);
 }
